<resources>
    <string name="app_name">Covid19App</string>

    <!-- QuestionBank -->
    <string name="question_ethnicity">What is your ethnicity?</string>


    <string name="question_gender">What is your gender?</string>
    <string name="question_patient_type">Are you an outpatient? </string>
    <string name="question_intubed">Do you require intubation? </string>
    <string name="question_pneumonia">Do you have pneumonia? </string>
    <string name="question_age">What is your age?</string>
    <string name="question_pregnancy">Are you pregnant?</string>
    <string name="question_diabetes">Do you have diabetes? </string>
    <string name="question_copd">Do you have COPD? </string>
    <string name="question_asthma">Do you have Asthma?</string>
    <string name="question_immune">Do you have an Immune suppression?</string>
    <string name="question_hypertension">Do you have Hypertension?</string>
    <string name="question_other">Do you have any Other disease?</string>
    <string name="question_cardiovascular">Do you have Cardiovascular disease?</string>
    <string name="question_obesity">Do you have Obesity?</string>
    <string name="question_renal">Do you have Renal disease?</string>
    <string name="question_tobacco">Do you smoke tobacco?</string>
    <string name="question_contact">Have you had contact with covid19?</string>
    <string name="question_icu">Have you been admitted to the ICU?</string>





    <!-- Buttons -->
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>

    <string name="male_button">Male</string>
    <string name="female_button">Female</string>

    <!-- Ethnicities -->
    <string name="ethnic_American_Indian_button">American Indian or Alaska Native</string>
    <string name="ethnic_Asian_button">Asian</string>
    <string name="ethnic_Black_button">Black or African American</string>
    <string name="ethnic_Hispanic_button">Hispanic or Latino</string>
    <string name="ethnic_Pacific_Islander_button">Native Hawaiian or Other Pacific Islander</string>
    <string name="ethnic_White_button">White</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>