<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="#144332"
    tools:context=".GenderFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_gender"/>

    <Button
        android:id="@+id/male_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male_button" />
    <Button
        android:id="@+id/female_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:drawableEnd="@drawable/arrow_right"
        android:drawablePadding="4dp"
        android:text="@string/next_button" />
</FrameLayout>